# SR_R

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/res/: output.tga
core/: CMakeLists.txt
core/include/core/base/: color.h  macro.h  stb_image.h  tgaimage.h  timer.h
core/include/core/log/: log_system.h
core/include/engine/: engine.h
core/include/function/framework/component/: component.h
core/include/function/framework/component/material/: material.h  material_impl.h
core/include/function/framework/component/mesh/: mesh.h  mesh_impl.h
core/include/function/framework/component/transform/: transform.h  transform_impl.h
core/include/function/framework/object/: object.h  object_id_allocator.h
core/include/function/framework/scene/: scene_manager.h
core/include/function/global/: global_context.h
core/include/function/render/: render_system.h  window_system.h
core/include/manager/asset_manager/: asset_manager.h
core/include/manager/config_manager/: config_manager.h
core/include/platform/: win32.h
core/include/ui/: window.h
core/src/: main.cpp
core/src/core/base/: color.cpp  stb_image.cpp  tgaimage.cpp  timer.cpp
core/src/core/log/: log_system.cpp
core/src/engine/: engine.cpp
core/src/function/framework/component/material/: material.cpp
core/src/function/framework/component/mesh/: mesh.cpp
core/src/function/framework/component/transform/: transform.cpp
core/src/function/framework/object/: object.cpp  object_id_allocator.cpp
core/src/function/framework/scene/: scene_manager.cpp
core/src/function/global/: global_context.cpp
core/src/function/mesh/: mesh.cpp
core/src/function/render/: render_system.cpp  window_system.cpp
core/src/manager/asset_manager/: asset_manager.cpp
core/src/manager/config_manager/: config_manager.cpp
core/src/platform/: win32.cpp
core/src/ui/: window.cpp
docs/: issues.md  layered.md
docs/drawio/: design.drawio
